<resources>
    <string name="app_name">TempConversionCEIS</string>
    <string name="action_settings">Settings</string>
    <string name="tempChoose">Choose Your Temperature</string>
    <string name="degFah">Degrees Fahrenheit</string>
    <string name="degCel">Degrees Celsius</string>
    <string name="degKel">Degrees Kelvin</string>
    <string name="Convert">Convert</string>
    <string name="enterTemp">Please enter the temperature and select the correct units then press Convert:</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="Welcome">Welcome to Gina Cooper\'s App</string>
    <string name="goWeather">Convert\nTemp</string>
    <string name="goTicTacToe">Tic Tac Toe</string>
    <string name="goInfo">Info</string>
    <string name="goMusic">Favorite\nSong</string>
    <string name="goTakePic">Take\nPicture</string>
    <string name="goDraw">My\nDrawing</string>
    <string name="title_activity_my_drawing">MyDrawing</string>
    <string name="title_activity_tic_tac_toe">TicTacToeActivity</string>
    <string name="message_label">Player X\'s turn</string>
    <string name="new_game_button">New Game</string>
    <string name="title_activity_information_page">InformationPageActivity</string>
    <string name="informationTitle">Your Information</string>
    <string name="favoriteSeason">What is your favorite season?</string>
    <string name="favoriteTemp">What is your favorite temperature?</string>
    <string name="allergies">Do you have allergies?</string>
    <string-array name="seasons">
        <item>Spring</item>
        <item>Summer</item>
        <item>Fall</item>
        <item>Winter</item>
    </string-array>
    <string name="title_activity_information_results">InformationResultsActivity</string>
    <string name="title_activity_song">SongActivity</string>
    <string name="title_activity_take_picture">TakePictureActivity</string>
</resources>
