<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ginac.tempconversionceis.MainMenuActivity"
    tools:showIn="@layout/activity_main_menu"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/lblWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="@string/Welcome"
        android:paddingBottom="64dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        style="@style/TextView"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="26dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:addStatesFromChildren="false"
        android:columnCount="3"
        android:orientation="horizontal"
        android:padding="@dimen/activity_vertical_margin"
        android:rowCount="2"
        android:useDefaultMargins="true"
        app:layout_editor_absoluteX="@dimen/activity_vertical_margin"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="12dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="37dp"
        app:layout_constraintTop_toBottomOf="@+id/lblWelcome"
        android:layout_marginRight="-49dp">

        <Button
            android:id="@+id/btnWeather"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center|fill"
            android:layout_row="0"
            android:text="@string/goWeather" />

        <Button
            android:id="@+id/btnTicTacToe"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center|fill"
            android:layout_row="0"
            android:text="@string/goTicTacToe" />

        <Button
            android:id="@+id/btnInfo"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="center|fill"
            android:layout_row="0"
            android:text="@string/goInfo" />

        <Button
            android:id="@+id/btnSong"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center|fill"
            android:layout_row="1"
            android:text="@string/goMusic" />

        <Button
            android:id="@+id/btnTakePic"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center|fill"
            android:layout_row="1"
            android:text="@string/goTakePic" />

        <Button
            android:id="@+id/btnDraw"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="center|fill"
            android:layout_row="1"
            android:text="@string/goDraw" />

    </GridLayout>

</android.support.constraint.ConstraintLayout>
